Add native splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   go_router: ^15.1.2
   provider: ^6.1.5
   get_it: ^8.0.3
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +24,16 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/swfast-logo-short.png
+  android: true
+  ios: true
+  web: true
+  android_gravity: fill
+  ios_content_mode: scaleAspectFill
+  web_image_mode: center
+  fullscreen: true
