--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   provider: ^6.1.5
   get_it: ^8.0.3
   flutter_native_splash: ^2.4.6
+  flutter_secure_storage: ^9.2.4
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_test:
