--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   get_it: ^8.0.3
   flutter_native_splash: ^2.4.6
   flutter_secure_storage: ^9.2.4
-  http: ^1.4.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
