--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
@@ -40,3 +41,8 @@ flutter_native_splash:
   ios_content_mode: scaleAspectFill
   web_image_mode: center
   fullscreen: true
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: assets/images/swfast-logo-short.png
